Added tests to get better coverage, implemented some missing methods in RouteMapper